💄 fix tree text span vertical alignment

--- a/components/tree/style/index.less
+++ b/components/tree/style/index.less
@@ -98,7 +98,7 @@
       margin: 0;
       cursor: pointer;
       text-decoration: none;
-      vertical-align: top;
+      vertical-align: middle;
       color: @text-color;
       transition: all .3s;
       height: @tree-title-height;
